--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Художній музей</title>
+    <link rel="shortcut icon" href="./images/NAMU.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -72,7 +73,7 @@
           </div>
           <div class="menu__buy-container">
             <button class="menu__buy-tickets">Купити квитки</button><!--
-            --><button class="menu__buy-arrow">→</button>
+            --><div class="menu__buy-arrow"><a class="menu__arrow-link">→</a></div>
           </div>
 
           <div class="menu__bottom bottom">
@@ -267,14 +268,16 @@
             class="gallery__img-6">
         </div>
       </div>
-      <button class="menu__buy-arrow gallery__button">></button>
+      <button class="menu__buy-arrow gallery__button"><a href="#" class="gallery__link link">></a></button>
     </section>
 
     <section class="follow">
       <img src="./images/following.png"
         alt="follow-img"
         class="follow__background">
-      <form class="follow__content">
+      <form class="follow__content"
+        method="GET"
+        action="#">
         <h3 class="follow__heading">Підписка</h3>
         <p class="follow__sentence">
           Бути в курсі всіх актуальних <br>подій та останніх новин.
@@ -285,9 +288,7 @@
             class="follow__email"
             placeholder="E-mail"
             required>
-          <input type="submit"
-            value=">"
-            class="follow__submit menu__buy-arrow">
+          <button type="submit" class="follow__submit menu__buy-arrow"><a href="#" class="follow__link link">></a></button>
         </div>
       </form>
     </section>
