--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
         class="header__main-logo">
 
       <div class="header__main">
-        <h3 class="header__title">Художній<br>музей</h3>
+        <h3 class="header__title">Худож<text class="header__unfilled">ній</text><br>музей</h3>
         <img src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
           alt="museum-photo"
           class="header__photo">
@@ -177,7 +177,7 @@
         </div>
       </div>
 
-      <h3 class="header__title-mobile">Художній<br>музей</h3>
+      <h3 class="header__title-mobile">Худож<text class="header__unfilled">ній</text><br>музей</h3>
       <div class="header__button-mobile">
         <button class="header__buy-tickets">квитки</button><!--
         --><button class="header__buy-arrow">→</button>
