--- a/src/index.html
+++ b/src/index.html
@@ -325,14 +325,17 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <div class="content__subscribe-input-container">
+        <form action="" class="content__subscribe-input-container">
           <input
             type="email"
             class="content__subscribe-input"
             placeholder="E-mail"
           >
-          <div class="square content__subscribe-square square--orange"></div>
-        </div>
+          <button
+            type="submit"
+            class="square content__subscribe-square square--orange">
+          </button>
+        </form>
       </section>
     </main>
 
