--- a/src/index.html
+++ b/src/index.html
@@ -117,18 +117,18 @@
               <span class="events">Виставка</span>
               <span class="data">26.08-29.11.2019</span>
             </div>
-            <h3 class="outside-title current-events__title">Йду і повертаюсь</h3>
+            <h3 class="outside-title ">Йду і повертаюсь</h3>
             <span></span>
             <span class="current-events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини<br> 1980-1995 років.</span>
           </div>
         </div>
         <div class="current-events__unit2">
-          <div class="current-events__description--descript2">
+          <div class="current-events__description">
             <div class="current-events__data">
               <span class="events">Виставка</span>
               <span class="data">26.08-29.11.2019</span>
             </div>
-            <h3 class="outside-title current-events__title">І спогади і мрії</h3>
+            <h3 class="outside-title">І спогади і мрії</h3>
             <span class="current-events__text">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</span>
           </div>
           <div class="current-events__picture">
@@ -190,8 +190,13 @@
             class="gallery__bottom-picture3 item2"
           >
         </div>
-        <div class="gallery__bottom squere"></div>
         <span class="gallery__btn"></span>
+        <div class="gallery__circles circles">
+          <div class="circles__item circles__item--active"></div>
+          <div class="circles__item"></div>
+          <div class="circles__item"></div>
+          <div class="circles__item"></div>
+        </div>
       </div>
     </div>
       <div class="subscription">
@@ -219,74 +224,75 @@
     </main>
     <footer class="footer" id="contacts">
       <div class="footer__container">
-        <div class="footer__left">
-          <div class="footer__icon">
-            <div class="footer__logo">
-              <img
-                class="footer__logo-img"
-                src="./images/NAMU.svg"
-                alt="logo-NAMU"
-              >
+        <div class="footer__content">
+          <div class="footer__left">
+            <div class="footer__icon">
+              <div class="footer__logo">
+                <img
+                  class="footer__logo-img"
+                  src="./images/NAMU.svg"
+                  alt="logo-NAMU"
+                >
+              </div>
+              <div class="footer__net">
+                <img
+                  class="icon__fb"
+                  src="./images/gallery/Facebook.png"
+                  alt="icon-facebook"
+                >
+                <img
+                  class="icon__inst"
+                  src="images/gallery/Vector.png"
+                  alt="logo-instagram"
+                >
+              </div>
             </div>
-            <div class="footer__net">
-              <img
-                class="icon__fb"
-                src="./images/gallery/Facebook.png"
-                alt="icon-facebook"
-              >
-              <img
-                class="icon__inst"
-                src="images/gallery/Vector.png"
-                alt="logo-instagram"
-              >
+            <div class="footer__info">
+              <div class="footer__time-works">
+                <span class="mini-title">Графік роботи</span>
+                <span><strong>12:00 — 20:00 </strong>середа</span>
+                <span><strong>12:00 — 20:00 </strong>четвер</span>
+                <span><strong>12:00 — 20:00 </strong>п'ятниця</span>
+                <span><strong>11:00 — 19:00 </strong>субота</span>
+                <span><strong>11:00 — 19:00 </strong>неділя</span>
+                <br>
+                <span>
+                  Вихідні: понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину<br> до закриття музею
+                </span>
+              </div>
+              <div class="footer__contacts">
+                <span class="mini-title">Контакти:</span>
+                <span>вул. М.Грушевського, 6;<br>
+                  Київ, 01001<br>
+                  тел.<a href="tel:+38-044-278-1357" class="footer__phone">+38 (044) 278-13-57</a><br>
+                  факс +38 (044) 278-13-57<br>
+                  e-mail: <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+                </span>
+              </div>
             </div>
           </div>
-          <div class="footer__info">
-            <div class="footer__time-works">
-              <span class="mini-title">Графік роботи</span>
-              <span><strong>12:00 — 20:00 </strong>середа</span>
-              <span><strong>12:00 — 20:00 </strong>четвер</span>
-              <span><strong>12:00 — 20:00 </strong>п'ятниця</span>
-              <span><strong>11:00 — 19:00 </strong>субота</span>
-              <span><strong>11:00 — 19:00 </strong>неділя</span>
-              <br>
-              <span>
-                Вихідні: понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину<br> до закриття музею
-              </span>
-            </div>
-            <div class="footer__contacts">
-              <span class="mini-title">Контакти:</span>
-              <span>вул. М.Грушевського, 6;<br>
-                Київ, 01001<br>
-                тел.<a href="tel:+38-044-278-1357" class="footer__phone">+38 (044) 278-13-57</a><br>
-                факс +38 (044) 278-13-57<br>
-                e-mail: <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
-              </span>
-            </div>
-          </div>
+
+          <hr class="footer__line"></hr>
+
+          <nav class="footer__nav">
+            <ul class="nav__list">
+              <div class="nav__list-left">
+                <li class="nav__item">Галерея</li>
+                <li class="nav__item">Виставки та події</li>
+                <li class="nav__item">Відвідування</li>
+                <li class="nav__item">Стати нашим другом</li>
+              </div>
+              <div class="nav__list-right">
+                <li class="nav__item">Про Нас</li>
+                <li class="nav__item" id="shop">Магазин</li>
+                <li class="nav__item" id="blog">Блог</li>
+                <li class="nav__item">Контакти</li>
+              </div>
+            </ul>
+          </nav>
         </div>
-
-        <div class="footer__line"></div>
-
-        <nav class="footer__nav">
-          <ul class="nav__list">
-            <div class="nav__list-left">
-              <li class="nav__item">Галерея</li>
-              <li class="nav__item">Виставки та події</li>
-              <li class="nav__item">Відвідування</li>
-              <li class="nav__item">Стати нашим другом</li>
-            </div>
-            <div class="nav__list-right">
-              <li class="nav__item">Про Нас</li>
-              <li class="nav__item" id="shop">Магазин</li>
-              <li class="nav__item" id="blog">Блог</li>
-              <li class="nav__item">Контакти</li>
-            </div>
-          </ul>
-        </nav>
       </div>
-
       <div class="footer__design">
         <p class="footer__design-info">Copyright © 2019. All Rights Reserved.</p>
         <p class="footer__design-name">Designed by Zhyriada Marina</p>
