--- a/src/index.html
+++ b/src/index.html
@@ -65,36 +65,278 @@
               <p class="title__picture-name">Дівчина з Поділля<br>В. Тропінін</p>
             </div>
           </div>
-        </div>
 
-        <div class="header__selection selection">
-          <label class="selection__languages" for="language">
-            <input
-              type="radio"
-              name="language"
-              id="language"
-            >
-            <div>
-              <input
-                class="selection__item"
-                type="radio"
-                name="language"
-                value="UA"
-                id="language[UA]"
-              >
-              <label class="selection__label" for="language[UA]">UA</label>
-              <input
-                class="selection__item"
-                type="radio"
-                name="language"
-                value="EN"
-                id="language[EN]"
-              >
-              <label class="selection__label" for="language[EN]">EN</label>
-            </div>
-          </label>
+          <div class="header__selection selection">
+            <a href="#" class="selection__item">UA</a>
+          </div>
         </div>
       </div>
     </header>
+
+    <main>
+      <section class="section" id="exhibition">
+        <h2 class="section__name section__name--exhibitions">Актуальні виставки</h2>
+        <div class="section__content section__content--exhibitions">
+          <div class="section__item section__item--angels">
+            <picture class="section__picture section__picture--angel">
+              <source srcset="./images/paintings/angel_small.png" media="(max-width: 690px)">
+              <source srcset="./images/paintings/angel.png">
+              <img
+                src="./images/paintings/angel.png"
+                alt="angel"
+                class="section__picture section__picture--angel"
+              >
+            </picture>
+            <div class="section__info exhibition section__info--angels">
+              <p class="exhibition__duration exhibition__duration--angels">11.07 - 22.09</p>
+              <h3 class="exhibition__name exhibition__name--angels">Кураторська виставка “Ангели”</h3>
+              <p class="exhibition__about exhibition__about--angels">Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...</p>
+              <button class="exhibition__button button">Купити квиток</button>
+            </div>
+          </div>
+
+          <div class="section__item section__item--present">
+            <picture class="section__picture section__picture--couple">
+              <source srcset="./images/paintings/couple_small.png" media="(max-width: 690px)">
+              <source srcset="./images/paintings/couple.png">
+              <img
+                src="./images/paintings/couple.png"
+                alt="couple"
+                class="section__picture section__picture--couple"
+              >
+            </picture>
+            <div class="section__info exhibition section__info--present">
+              <p class="exhibition__duration exhibition__duration--present">Діє постійно</p>
+              <h3 class="exhibition__name exhibition__name--present">Мистецтво ХХ&nbsp;ст.&nbsp;—&nbsp;XXI&nbsp;ст.</h3>
+              <p class="exhibition__about exhibition__about--present">Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.</p>
+              <button class="exhibition__button button">Купити квиток</button>
+            </div>
+            <div class="section__background section__background--present"></div>
+          </div>
+
+          <div class="section__item section__item--ancient">
+            <picture class="section__picture section__picture--player">
+              <source srcset="./images/paintings/player_small.png" media="(max-width: 690px)">
+              <source srcset="./images/paintings/player.png">
+              <img
+                src="./images/paintings/player.png"
+                alt="player"
+                class="section__picture section__picture--player"
+              >
+            </picture>
+            <div class="section__info exhibition section__info--ancient">
+              <p class="exhibition__duration exhibition__duration--ancient">Діє постійно</p>
+              <h3 class="exhibition__name exhibition__name--ancient">Стародавнє мистецтво</h3>
+              <p class="exhibition__about">Визначні приклади стародавнього українського іконопису та живопису</p>
+              <button class="exhibition__button button">Купити квиток</button>
+            </div>
+            <div class="section__background section__background--ancient"></div>
+          </div>
+          <a href="#" class="section__add">Архів виставок</a>
+        </div>
+      </section>
+
+      <section class="section section--events">
+        <h2 class="section__name section__name--events">Найближчі події</h2>
+        <div class="section__content section__content--events">
+          <div class="section__item section__item--excursion">
+            <img
+              src="./images/gudimov.png"
+              alt="gudimov"
+              class="section__picture section__picture--excursion"
+            >
+            <div class="section__duration section__duration--excursion">
+              <div class="section__date section__date--excursion"></div>
+              <p class="section__time">13:00</p>
+            </div>
+            <div class="section__info event section__info--excursion">
+              <p class="event__type event__type--excursion">Екскурсія</p>
+              <h3 class="event__name event__name--excursion">Кураторські екскурсії від Павла Гудімова</h3>
+              <p class="event__about">Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...</p>
+              <button class="event__button button">Зареєструватись</button>
+            </div>
+          </div>
+
+          <div class="section__item section__item--masterclass">
+            <img
+              src="./images/art-travel.png"
+              alt="art-travel"
+              class="section__picture section__picture--masterclass"
+            >
+            <div class="section__duration section__duration--masterclass">
+              <div class="section__date section__date--masterclass"></div>
+              <p class="section__time">14:00</p>
+            </div>
+            <div class="section__info event section__info--masterclass">
+              <p class="event__type event__type--masterclass">Майстер-клас</p>
+              <h3 class="event__name">Подорож до Австралії</h3>
+              <p class="event__about">Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.</p>
+              <button class="event__button button">Зареєструватись</button>
+            </div>
+          </div>
+          <a href="#" class="section__add section__add--events">Календар подій</a>
+        </div>
+      </section>
+
+      <section class="section section--visit" id="visit">
+        <div class="section__content visit">
+          <h2 class="visit__name">Сплануйте візит до музею</h2>
+          <p class="visit__about">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
+          <button class="visit__button button">Почати</button>
+        </div>
+      </section>
+
+      <section class="section section--news">
+        <h2 class="section__name section__name--news">Новини</h2>
+        <div class="section__content section__content--news">
+          <div class="section__item section__item--winner">
+            <img
+              src="./images/catalogs.png"
+              alt="catalogs"
+              class="section__picture section__picture--winner"
+            >
+            <div class="section__info news section__info--winner">
+              <p class="news__date">9 серпня 2019</p>
+              <h3 class="news__name">Оголошення переможця</h3>
+              <p class="news__about">Друзі, сьогодні п'ятниця! А це означає, що час оголосити переможця розіграшу...</p>
+            </div>
+            <div class="news__slider">
+              <div class="news__slider-item"></div>
+              <div class="news__slider-item"></div>
+              <div class="news__slider-item"></div>
+            </div>
+          </div>
+
+          <div class="section__item section__item--catday">
+            <img
+              src="./images/coloring-book.png"
+              alt="coloring-book"
+              class="section__picture section__picture--catday"
+            >
+            <div class="section__info news section__info--catday">
+              <p class="news__date">9 серпня 2019</p>
+              <h3 class="news__name">Міжнародний день котів</h3>
+              <p class="news__about">Музей з левами не може просто так взяти і пропустити Міжнародний день котів!</p>
+            </div>
+          </div>
+
+          <div class="section__item section__item--anniversary">
+            <img
+              src="./images/paintings/cossacks.png"
+              alt="cossacks"
+              class="section__picture section__picture--anniversary"
+            >
+            <div class="section__info news section__info--anniversary">
+              <p class="news__date">9 серпня 2019</p>
+              <h3 class="news__name">200 років П. Кулішу</h3>
+              <p class="news__about">Поруч із Тарасом Шевченком це найважливіша постать в українській культурі ХІХ століття...</p>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="section__add section__add--news">Усі новини</a>
+      </section>
+
+      <section class="section section--subscribe">
+        <h2 class="subscribe__name">Підпишіться на дайджест</h2>
+        <p class="subscribe__about">Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів</p>
+        <form
+          class="subscribe__form"
+          action="#"
+          method="POST"
+        >
+          <input
+            class="subscribe__input"
+            type="email"
+            name="email"
+            placeholder="e-mail"
+          >
+          <button type="submit" class="subscribe__button"></button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__item footer__item--contacts">
+          <h2 class="footer__name">Контакти</h2>
+          <p class="footer__address">Київ,<br>вул. М. Грушевського, 6</p>
+          <p class="footer__tel">тел. 278-13-57,<br>278-74-54</p>
+          <a class="footer__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+          <div class="footer__socials">
+            <a href="#" class="footer__icon">
+              <img src="./images/faceb.svg" alt="facebook">
+            </a>
+            <a href="#" class="footer__icon">
+              <img src="./images/twit.svg" alt="twitter">
+            </a>
+            <a href="#" class="footer__icon">
+              <img src="./images/teleg.svg" alt="telegram">
+            </a>
+            <a href="#" class="footer__icon">
+              <img src="./images/inst.svg" alt="instagram">
+            </a>
+          </div>
+
+        </div>
+        <div class="footer__item footer__item--schedule">
+          <h2 class="footer__name">Розклад роботи</h2>
+          <p class="footer__schedule">
+            пн  вихідний
+            вт  вихідний
+            ср  10:00 - 17:00
+            чт  10:00 - 17:00
+            пт  12:00 - 19:00
+            сб  11:00 - 18:00
+            нд  10:00 - 17:00
+          </p>
+        </div>
+
+        <div class="footer__item footer__item--programs">
+          <h2 class="footer__name">Членські програми</h2>
+          <ul class="footer__programs">
+            <li>
+              <a class="footer__link" href="#">Зробити разовий внесок</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">Індивідуальна</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">Корпоративна</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__item footer__item--about-us">
+          <h2 class="footer__name">Про нас</h2>
+          <ul class="footer__about-us">
+            <li>
+              <a class="footer__link" href="#">Історія</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">Обличчя музею</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">Вакансії</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">Новини</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <a href="#" class="footer__button">
+        <img
+          src="./images/arrow.svg"
+          alt=""
+          class="footer__arrow"
+        >
+      </a>
+
+      <div class="footer__copyrights">
+        <span>© 2010 — 2020</span>
+        <span>Privacy — Terms</span>
+      </div>
+    </footer>
   </body>
 </html>
