--- a/src/index.html
+++ b/src/index.html
@@ -280,15 +280,15 @@
         </div>
         <div class="footer__item footer__item--schedule">
           <h2 class="footer__name">Розклад роботи</h2>
-          <p class="footer__schedule">
-            пн  вихідний
-            вт  вихідний
-            ср  10:00 - 17:00
-            чт  10:00 - 17:00
-            пт  12:00 - 19:00
-            сб  11:00 - 18:00
-            нд  10:00 - 17:00
-          </p>
+          <ul class="footer__schedule">
+            <li class="footer__schedule-item">пн  вихідний</li>
+            <li class="footer__schedule-item">вт  вихідний</li>
+            <li class="footer__schedule-item">ср  10:00 - 17:00</li>
+            <li class="footer__schedule-item">чт  10:00 - 17:00</li>
+            <li class="footer__schedule-item">пт  12:00 - 19:00</li>
+            <li class="footer__schedule-item">сб  11:00 - 18:00</li>
+            <li class="footer__schedule-item">нд  10:00 - 17:00</li>
+          </ul>
         </div>
 
         <div class="footer__item footer__item--programs">
