--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <h1>Hello museum!</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
