created title museum

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+    </header>
+
+    <div class="title">
+      <div class="title__logo"></div>
+      <p class="title__heading">худож<span class="title__heading--opacity">ній</span><br>музей</p>
+      <img
+        class="title__img"
+        src="../src/images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
+        alt="...."
+        >
+      </img>
+      <div class="title__ticket">
+        квитки
+        <button type="submit" class="title__button button">></button>
+      </div>
+      <p class="title__mark">ПОДІЇ</p>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
