--- a/src/index.html
+++ b/src/index.html
@@ -13,19 +13,50 @@
     </header>
 
     <div class="title">
-      <div class="title__logo"></div>
+      <div class="title__logo logo"></div>
       <p class="title__heading">худож<span class="title__heading--opacity">ній</span><br>музей</p>
-      <img
-        class="title__img"
-        src="../src/images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
-        alt="...."
-        >
-      </img>
+      <div class="title_img-size">
+        <img
+          class="title__img"
+          src="../src/images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
+          alt="...."
+          >
+        </img>
+      </div>
       <div class="title__ticket">
         квитки
         <button type="submit" class="title__button button">></button>
       </div>
-      <p class="title__mark">ПОДІЇ</p>
+      <p class="title__mark mark">події</p>
+    </div>
+    <div class="events">
+      <div class="events__title">Актуальні події</div>
+      <section class="events__element">
+        <img
+          class="events__img"
+          src="images/events/1.jpg"
+          alt="картина пейзаж"
+          >
+        <div class="events__info">
+          <div class="events__mark">виставка</div>
+          <div class="events__date">26.08-29.11.2019</div>
+          <h2 class="events__heading">Йду і повертаюсь</h2>
+          <p class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+        </div>
+      </section>
+      <section class="events__element">
+        <div class="events__info">
+          <div class="events__mark">виставка</div>
+          <div class="events__date">26.08-29.11.2019</div>
+          <h2 class="events__heading">І спогади і мрії</h2>
+          <p class="events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </div>
+        <img
+          class="events__img"
+          src="images/events/2.jpg"
+          alt="картина дiвчини з павлiном"
+          >
+      </section>
     </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
